tests/invalid/listen_until_disable_in_class.prsm
// E083: listen until disable is only valid inside a component
class Helper {
  func setup(button: Button) {
    listen button.onClick until disable {
      fire()
    }
  }
}
